objects/SMAX_PS_Model_Series_Technician__c.object
<CustomObject>
    <label>Model Series Technician</label>
    <nameField>
        <label>Model Series Technician Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Model Series Technicians</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SMAX_PS_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Model Series Technicians</relationshipLabel>
        <relationshipName>Model_Series_Technicians</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Work_Center__c</fullName>
        <label>Work Center</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Model_Series__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model Series</label>
        <referenceTo>SMAX_PS_Model_Series__c</referenceTo>
        <relationshipLabel>Model Series Technicians</relationshipLabel>
        <relationshipName>Model_Series_Technicians</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>